[gd_scene load_steps=2 format=3 uid="uid://bwjm8n2qplco7"]

[ext_resource type="Script" path="res://scripts/ui/LevelUpScreen.gd" id="1_4v2gc"]

[node name="LevelUpScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_4v2gc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Header" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(1, 1, 0, 1))
add_theme_font_size_override("font_size", 32)

[node name="StatPointsLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "Stat Points: 2"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(0, 1, 0, 1))

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatTitle" type="Label" parent="VBox/StatsContainer"]
layout_mode = 2
text = "Allocate Stat Points:"
add_theme_color_override("font_color", Color(1, 1, 1, 1))

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="UnlocksContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Continue"